<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewLocActivity"
    android:background="#F2E5F6"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addnewloclabel"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp">

    </TextView>

    <EditText
        android:id="@+id/address_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="text"
        android:hint="@string/addresslabel">
    </EditText>

    <TextView
        android:id="@+id/latitude_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitudelabel"
        android:inputType="numberDecimal"
        android:minHeight="48dp">
    </TextView>

    <TextView
        android:id="@+id/longitude_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitudelabel"
        android:minHeight="48dp"
        android:inputType="numberDecimal">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/add_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#AF8FE9"
            android:text="@string/addbtntxt">

        </Button>

        <Button
            android:id="@+id/back_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9966CC"
            android:text="@string/backbtntxt">

        </Button>

    </LinearLayout>

</LinearLayout>