<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:elevation="7dp"
    android:backgroundTint="#DCD0FF">

    <TextView
        android:id="@+id/pinned_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_pin_TV"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:id="@+id/pinnedloc_linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_margin="3dp">


        <TextView
            android:id="@+id/pinned_latitude"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/lat_pin_TV">

        </TextView>

        <TextView
            android:id="@+id/pinned_longitude"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:text="@string/long_pin_TV">

        </TextView>
    </LinearLayout>


</androidx.cardview.widget.CardView>